force-app/main/default/objects/Company_Client_Office__c/Company_Client_Office__c.object-meta.xml
<CustomObject>
    <label>Intranet Entity</label>
    <nameField>
        <displayFormat>Table Record No. {0}</displayFormat>
        <label>Intranet Entity</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Intranet Entities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>