force-app/main/default/objects/Company_Client_Office__c/fields/Account_Associate__c.field-meta.xml
<CustomField>
    <fullName>Account_Associate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Associate</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Account_Associate</relationshipName>
    <type>Lookup</type>
</CustomField>