force-app/main/default/objects/Company_Client_Office__c/fields/Adjusted_MRR_Split__c.field-meta.xml
<CustomField>
    <fullName>Adjusted_MRR_Split__c</fullName>
    <label>Adjusted MRR Split</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>