force-app/main/default/objects/Company_Client_Office__c/fields/Client_Office_Company__c.field-meta.xml
<CustomField>
    <fullName>Client_Office_Company__c</fullName>
    <formula>Client_Office_Intranet__r.Company_Intranet__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Office Company</label>
    <type>Text</type>
</CustomField>