force-app/main/default/objects/Company_Client_Office__c/fields/Client_Office_Intranet__c.field-meta.xml
<CustomField>
    <fullName>Client_Office_Intranet__c</fullName>
    <label>Intranet Client Office</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Company_Intranet__c</field>
            <operation>equals</operation>
            <valueField>Client_Office_Intranet__c.Company_Intranet__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Client_Office_Intranet__c</referenceTo>
    <relationshipLabel>Intranet Entities</relationshipLabel>
    <relationshipName>Company_Client_Offices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>