force-app/main/default/objects/Company_Client_Office__c/fields/Company_Intranet__c.field-meta.xml
<CustomField>
    <fullName>Company_Intranet__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Company Name</label>
    <referenceTo>Company_Intranet__c</referenceTo>
    <relationshipName>Company_Client_Offices</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>