force-app/main/default/objects/Company_Client_Office__c/fields/Contracted_User_per_Client_Office__c.field-meta.xml
<CustomField>
    <fullName>Contracted_User_per_Client_Office__c</fullName>
    <description>Free text to be entered by Opportunity Team member</description>
    <label>Contracted User Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>