force-app/main/default/objects/Company_Client_Office__c/fields/Mismatch_Company__c.field-meta.xml
<CustomField>
    <fullName>Mismatch_Company__c</fullName>
    <formula>Company_Intranet__c !=  Client_Office_Intranet__r.Company_Intranet__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mismatch Company</label>
    <type>Checkbox</type>
</CustomField>