force-app/main/default/objects/Company_Client_Office__c/fields/Opp_stage__c.field-meta.xml
<CustomField>
    <fullName>Opp_stage__c</fullName>
    <formula>TEXT(Opportunity__r.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp stage</label>
    <type>Text</type>
</CustomField>