force-app/main/default/objects/Company_Client_Office__c/fields/RunOfficeList__c.field-meta.xml
<CustomField>
    <fullName>RunOfficeList__c</fullName>
    <formula>Opportunity__r.Closed_Intrenet__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RunOfficeList</label>
    <type>Checkbox</type>
</CustomField>