force-app/main/default/objects/Company_Client_Office__c/recordTypes/Connections.recordType-meta.xml
<RecordType>
    <fullName>Connections</fullName>
    <active>true</active>
    <description>Used on Intranet Entities added to Surveys and Connections only Opps</description>
    <label>Connections</label>
</RecordType>