force-app/main/default/objects/Company_Client_Office__c/recordTypes/Forum.recordType-meta.xml
<RecordType>
    <fullName>Forum</fullName>
    <active>true</active>
    <description>Used on Intranet Entities associated with CX&amp;FM and Forum only Opps</description>
    <label>Forum</label>
</RecordType>