force-app/main/default/objects/Company_Client_Office__c/validationRules/Company_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Company_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
AND(NOT(ISBLANK(Opportunity__r.Company_Intranet__c)),  Company_Intranet__r.Name != Opportunity__r.Company_Intranet__c),
ISPICKVAL(Opportunity__r.Type, &quot;Trial&quot;)
)</errorConditionFormula>
    <errorDisplayField>Company_Intranet__c</errorDisplayField>
    <errorMessage>Please select the same Company for Client Offices</errorMessage>
</ValidationRule>