force-app/main/default/objects/Company_Client_Office__c/validationRules/Prevent_Duplicate_Client_Office.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Duplicate_Client_Office</fullName>
    <active>true</active>
    <description>Prevents duplicate client offices from being related to the Opportunity</description>
    <errorConditionFormula>AND( 
NOT(ISBLANK(Opportunity__r.Client_Office_Intranet__c)), 
CONTAINS(Opportunity__r.Client_Office_Intranet__c, Client_Office_Intranet__r.Name + &quot;;&quot;),
ISNEW(),
$User.Bypass_Validation__c = FALSE
)</errorConditionFormula>
    <errorMessage>This Client Office has already been added</errorMessage>
</ValidationRule>